# rustic-wisdom

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  shell.nix
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml  ethos-engine-github-metrics.yml  rust_dependency_updater.yml
src/EthosEngine/: main.rs  mod.rs
src/EthosEngine/ai/: chatgpt.rs  mod.rs
src/Sirani/: Makefile  docker-compose.yml  kibana.yml  metrics.py
src/Sirani/self-hosted-runner/: Dockerfile  entrypoint.sh  get-token.sh  requirements.txt
tests/: main_tests.rs
