[package]
name = "rustic-wisdom"
version = "0.2.0"
edition = "2021"

# Path to the main source file
[[bin]]
name = "rustic-wisdom"
path = "src/EthosEngine/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"
clap = "4.5"
once_cell = "1.19.0"
